# repro-nodejs-binary-absolute-import-failure

./: BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json
main/: BUILD.bazel  index.ts
mod/: BUILD.bazel  index.ts
